# db-crud-guard

./: ANTIGRAVITY_INSTALL.md  CLAUDE_INSTALL.md  CODEX_INSTALL.md  README.md  SKILL.md  pyproject.toml
.agent/skills/db-crud-guard/: SKILL.md
.agents/skills/db-crud-guard/: SKILL.md
.claude/skills/db-crud-guard/: SKILL.md
.github/workflows/: ci.yml
agents/: openai.yaml
references/: security-checklist.md
scripts/: db_registry.py  registry_store.py  run_sql.py
tests/: test_run_sql.py
